[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loopgen_sai"
version = "0.0.1"
authors = [
    { name="Justice", email="saicoder27@gmail.com" },
]
description="generate styled loops"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[project.urls]
"Homepage" = "https://github.com/Justice603-tech/Loopgen"
"Bug Tracker" = "https://github.com/Justice603-tech/Loopgen/issues"

